# machine-learning-zoomcamp-homework

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
00_old-environment/: Dockerfile  environment_setup.md  pyproject.toml  requirements.txt
01_intro/: 01_homework.ipynb
02_regression/: 02_homework.ipynb
03_classification/: 03_homework.ipynb
04_evaluation/: 04_homework.ipynb
05_deployment/: Dockerfile  app.py  predict.py
07_midterm_project/: Dockerfile  Dockerfile.train  README.md  docker-compose.train.yml  pyproject.toml  requirements.txt  requirements_deployemnt.txt
07_midterm_project/notebooks/: midterm_project_notebook.ipynb  old_midterm_project_notebook.ipynb
07_midterm_project/scripts/: app.py  predict.py  test_request.py  train.py
08_deep_learning/: 08_deep_learning_homeworks.ipynb
notebooks/06_trees/: 06_homework.ipynb
