[project]
name = "ml-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.1",
    "requests>=2.32.5",
    "scikit-learn==1.6.1",
    "uvicorn>=0.38.0",
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.7.0",
    "xgboost>=2.0.0",
    "wget>=3.2",
    "unidecode",
    "tqdm",
]